// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layouts/Layout Grid Auto Adjusting 1`] = `
<div
  class="fd-container"
>
  
  
  <div
    class="fd-row"
  >
    
    
    <div
      class="fd-col fd-col--full"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-1"
      >
        
            Auto adjusting col before 7 col
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--7"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-2"
      >
        
            7 col
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--full"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-1"
      >
        
            Auto adjusting col after 7 col
        
      </div>
      
    
    </div>
    
  
  </div>
  

</div>
`;

exports[`Storyshots Layouts/Layout Grid Different Size Columns 1`] = `
<section>
  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-1"
        >
          12 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--11"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-2"
        >
          11 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--1"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-3"
        >
          1 column element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--10"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-4"
        >
          10 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--2"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-5"
        >
          2 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--9"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
        >
          9 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--3"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-7"
        >
          3 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--8"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-8"
        >
          8 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--4"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-9"
        >
          4 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--7"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-10"
        >
          7 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--5"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-11"
        >
          5 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--6"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-12"
        >
          6 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--6"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-1"
        >
          6 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--5"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-2"
        >
          5 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--7"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-3"
        >
          7 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--4"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-4"
        >
          4 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--8"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-5"
        >
          8 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--3"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
        >
          3 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--9"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-7"
        >
          9 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--2"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-8"
        >
          2 columns element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--10"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-9"
        >
          10 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col fd-col--1"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-10"
        >
          1 column element
        </div>
        
      
      </div>
      
      
      <div
        class="fd-col fd-col--11"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-11"
        >
          11 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-container"
  >
    
  
    <div
      class="fd-row"
    >
      
      
      <div
        class="fd-col"
      >
        
          
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--color-12"
        >
          12 columns element
        </div>
        
      
      </div>
      
  
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Layouts/Layout Grid Nesting 1`] = `
<div
  class="fd-container"
>
  
  
  <div
    class="fd-row"
  >
    
    
    <div
      class="fd-col fd-col--2"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-1"
      >
        
            6 col (1/2 = 50%)
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--10"
    >
      
        
      <div
        "=""
        class="fd-row"
      >
        
            
        <div
          class="fd-col fd-col--2"
        >
          
                
          <div
            class="docs-layout-grid-bg docs-layout-grid-bg--color-2"
          >
             
                    2 col inner row 1 (1/12 ~8%)
                
          </div>
           
            
        </div>
        
            
        <div
          class="fd-col fd-col--10"
        >
          
                
          <div
            class="fd-row"
          >
            
                    
            <div
              class="fd-col fd-col--6"
            >
              
                        
              <div
                class="docs-layout-grid-bg docs-layout-grid-bg--color-3"
              >
                
                            6 coll inner row 2 (5/24 ~21%)
                        
              </div>
              
                    
            </div>
                  
                    
            <div
              class="fd-col fd-col--6"
            >
              
                        
              <div
                class="fd-row"
              >
                
                            
                <div
                  class="fd-col fd-col--4"
                >
                  
                                
                  <div
                    class="docs-layout-grid-bg docs-layout-grid-bg--color-4"
                  >
                    
                                4 coll inner row 3 (5/72 ~7%)
                                
                  </div>
                  
                            
                </div>
                
                            
                <div
                  class="fd-col fd-col--8"
                >
                  
                                
                  <div
                    class="docs-layout-grid-bg docs-layout-grid-bg--color-5"
                  >
                    
                                8 coll inner row 3 (10/72 ~14%)
                                
                  </div>
                  
                            
                </div>
                
                        
              </div>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
  
  </div>
  

</div>
`;

exports[`Storyshots Layouts/Layout Grid No Gap 1`] = `
<div
  class="fd-container fd-container--no-horizontal-gap fd-container--no-vertical-gap"
>
  
  
  <div
    class="fd-row"
  >
    
    
    <div
      class="fd-col fd-col--8"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-1"
      >
        
            8 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--4"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-2"
      >
        
            4 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--6"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-3"
      >
        
            6 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--6"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-4"
      >
        
            6 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--4"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-5"
      >
        
            4 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--8"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
      >
        
            8 col no gap
        
      </div>
      
    
    </div>
    
  
  </div>
  

</div>
`;

exports[`Storyshots Layouts/Layout Grid No Horizontal Gap 1`] = `
<div
  class="fd-container fd-container--no-horizontal-gap"
>
  
  
  <div
    class="fd-row"
  >
    
    
    <div
      class="fd-col fd-col--8"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-1"
      >
        
            8 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--4"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-2"
      >
        
            4 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--6"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-3"
      >
        
            6 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--6"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-4"
      >
        
            6 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--4"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-5"
      >
        
            4 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--8"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
      >
        
            8 col no gap
        
      </div>
      
    
    </div>
    
  
  </div>
  

</div>
`;

exports[`Storyshots Layouts/Layout Grid No Vertical Gap 1`] = `
<div
  class="fd-container fd-container--no-vertical-gap"
>
  
  
  <div
    class="fd-row"
  >
    
    
    <div
      class="fd-col fd-col--8"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-1"
      >
        
            8 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--4"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-2"
      >
        
            4 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--6"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-3"
      >
        
            6 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--6"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-4"
      >
        
            6 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--4"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-5"
      >
        
            4 col no gap
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--8"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-6"
      >
        
            8 col no gap
        
      </div>
      
    
    </div>
    
  
  </div>
  

</div>
`;

exports[`Storyshots Layouts/Layout Grid Offset 1`] = `
<div
  class="fd-container"
>
  
  
  <div
    class="fd-row"
  >
    
    
    <div
      class="fd-col"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-1"
      >
        
            12 columns
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--6"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-3"
      >
        
            6 columns
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--8 fd-col--offset-4 fd-col-md--6 fd-col-md--offset-2 fd-col-lg--4 fd-col-lg--offset-4 fd-col-lx--3 fd-col-lx--offset-6"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-5"
      >
         
            Different column-width and offset in different inflection points 
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--6 fd-col--offset-6"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-7"
      >
         
            6 columns with 6-column offset 
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--3 fd-col--offset-after-1 fd-col-md--offset-after-2 fd-col-lg--offset-after-2 fd-col-xl--offset-after-1"
    >
      
      
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-8"
      >
         
          2 column-width and offset after in different inflection points 
      
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--4 fd-col--offset-after-1"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-9"
      >
         
            4 columns with 2-column offset after
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--2"
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-12"
      >
        2 column element
      </div>
      
    
    </div>
    
  
  </div>
  

</div>
`;

exports[`Storyshots Layouts/Layout Grid Responsiveness 1`] = `
<div
  class="fd-container"
>
  
  
  <div
    class="fd-row"
  >
    
    
    <div
      class="fd-col fd-col--12 fd-col-md--6 fd-col-lg--4 fd-col-xl--4 "
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-1"
      >
        (1 cell)
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--12 fd-col-md--6 fd-col-lg--4 fd-col-xl--4 "
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-2"
      >
        (2 cell)
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--12 fd-col-md--6 fd-col-lg--4 fd-col-xl--4 "
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-3"
      >
        (3 cell)
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--12 fd-col-md--6 fd-col-lg--4 fd-col-xl--4 "
    >
      
        
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--color-4"
      >
        (4 cell)
      </div>
      
    
    </div>
    
  
  </div>
  

</div>
`;
